--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="./assets/style.css">
 </head>
 <body>
-    
+    <div class="container">
+        <div id="home" class="flex-column flex-center">
+            <h1>Are You Ready?</h1>
+        </div>
+    </div>
 </body>
 </html>
