--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page</title>
     <link rel="stylesheet" href="./assets/style.css">
+    <script src="https://kit.fontawesome.com/ddfa2fc753.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="container">
         <div id="home" class="flex-column flex-center">
             <h1>Are You Ready?</h1>
+            <a href="/game.html" class="btn">Play</a>
+            <a href="/hightscores.html" id="highscore-btn" class="btn">High Scores</a>
         </div>
     </div>
 </body>
