--- a/game/index.html
+++ b/game/index.html
@@ -9,6 +9,27 @@
     <link rel="stylesheet" href="game\style.css">
 </head>
 <body>
-    
+    <div class="container">
+        <div id="game" class="justify-center flex-column">
+            <div id="hud">
+                <div class="hud-item">
+                    <p id="progressText" class="hud-prefix">
+                        Question
+                    </p>
+                    <div id="progessBar">
+                        <div id="progressBarFull"></div>
+                    </div>
+                </div>
+                <div class="hud-item">
+                    <p class="hud-prefix">
+                        Score
+                    </p>
+                    <h1 class="hud-main-text" id="score">
+                        0
+                    </h1>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
