--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
         <div id="home" class="flex-column flex-center">
             <h1>Are You Ready?</h1>
-            <a href="/game.html" class="btn">Play</a>
+            <a href="./game/index.html" class="btn">Play</a>
             <a href="/hightscores.html" id="highscore-btn" class="btn">High Scores</a>
         </div>
     </div>
