--- a/game/index.html
+++ b/game/index.html
@@ -16,7 +16,7 @@
                     <p id="progressText" class="hud-prefix">
                         Question
                     </p>
-                    <div id="progessBar">
+                    <div id="progressBar">
                         <div id="progressBarFull"></div>
                     </div>
                 </div>
